--- a/build-Project_3_MC-Desktop_Qt_5_13_0_clang_64bit-Debug/Makefile
+++ b/build-Project_3_MC-Desktop_Qt_5_13_0_clang_64bit-Debug/Makefile
@@ -52,12 +52,12 @@ OBJECTS_DIR   = ./
 
 ####### Files
 
-SOURCES       = ../Project_3_MC/functions.cpp \
+SOURCES       = ../Project_3_MC/MC_Functions.cpp \
 		../Project_3_MC/lib.cpp \
-		../Project_3_MC/main.cpp 
-OBJECTS       = functions.o \
+		../Project_3_MC/mc_1.cpp 
+OBJECTS       = MC_Functions.o \
 		lib.o \
-		main.o
+		mc_1.o
 DIST          = /Users/oyvindengebretsen/Qt2/5.13.0/clang_64/mkspecs/features/spec_pre.prf \
 		/Users/oyvindengebretsen/Qt2/5.13.0/clang_64/mkspecs/qdevice.pri \
 		/Users/oyvindengebretsen/Qt2/5.13.0/clang_64/mkspecs/features/device_config.prf \
@@ -224,9 +224,9 @@ DIST          = /Users/oyvindengebretsen/Qt2/5.13.0/clang_64/mkspecs/features/sp
 		/Users/oyvindengebretsen/Qt2/5.13.0/clang_64/mkspecs/features/exceptions.prf \
 		/Users/oyvindengebretsen/Qt2/5.13.0/clang_64/mkspecs/features/yacc.prf \
 		/Users/oyvindengebretsen/Qt2/5.13.0/clang_64/mkspecs/features/lex.prf \
-		../Project_3_MC/Project_3_MC.pro lib.h ../Project_3_MC/functions.cpp \
+		../Project_3_MC/Project_3_MC.pro lib.h ../Project_3_MC/MC_Functions.cpp \
 		../Project_3_MC/lib.cpp \
-		../Project_3_MC/main.cpp
+		../Project_3_MC/mc_1.cpp
 QMAKE_TARGET  = Project_3_MC
 DESTDIR       = 
 TARGET        = Project_3_MC
@@ -631,7 +631,7 @@ compiler_clean:
 
 ####### Compile
 
-functions.o: ../Project_3_MC/functions.cpp /usr/local/Cellar/armadillo/9.600.6/include/armadillo \
+MC_Functions.o: ../Project_3_MC/MC_Functions.cpp /usr/local/Cellar/armadillo/9.600.6/include/armadillo \
 		/usr/local/Cellar/armadillo/9.600.6/include/armadillo_bits/compiler_extra.hpp \
 		/usr/local/Cellar/armadillo/9.600.6/include/armadillo_bits/config.hpp \
 		/usr/local/Cellar/armadillo/9.600.6/include/armadillo_bits/compiler_setup.hpp \
@@ -1200,12 +1200,12 @@ functions.o: ../Project_3_MC/functions.cpp /usr/local/Cellar/armadillo/9.600.6/i
 		/usr/local/Cellar/armadillo/9.600.6/include/armadillo_bits/newarp_UpperHessenbergQR_meat.hpp \
 		/usr/local/Cellar/armadillo/9.600.6/include/armadillo_bits/compiler_setup_post.hpp \
 		../Project_3_MC/lib.h
-	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o functions.o ../Project_3_MC/functions.cpp
+	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o MC_Functions.o ../Project_3_MC/MC_Functions.cpp
 
 lib.o: ../Project_3_MC/lib.cpp ../Project_3_MC/lib.h
 	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o lib.o ../Project_3_MC/lib.cpp
 
-main.o: ../Project_3_MC/main.cpp /usr/local/Cellar/armadillo/9.600.6/include/armadillo \
+mc_1.o: ../Project_3_MC/mc_1.cpp /usr/local/Cellar/armadillo/9.600.6/include/armadillo \
 		/usr/local/Cellar/armadillo/9.600.6/include/armadillo_bits/compiler_extra.hpp \
 		/usr/local/Cellar/armadillo/9.600.6/include/armadillo_bits/config.hpp \
 		/usr/local/Cellar/armadillo/9.600.6/include/armadillo_bits/compiler_setup.hpp \
@@ -1774,7 +1774,7 @@ main.o: ../Project_3_MC/main.cpp /usr/local/Cellar/armadillo/9.600.6/include/arm
 		/usr/local/Cellar/armadillo/9.600.6/include/armadillo_bits/newarp_UpperHessenbergQR_meat.hpp \
 		/usr/local/Cellar/armadillo/9.600.6/include/armadillo_bits/compiler_setup_post.hpp \
 		../Project_3_MC/lib.h
-	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o main.o ../Project_3_MC/main.cpp
+	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o mc_1.o ../Project_3_MC/mc_1.cpp
 
 ####### Install
 
